// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotLayout: >  computedAmazonView 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          201,
          361,
        ],
        [
          198,
          371,
        ],
        [
          195,
          361,
        ],
      ],
      "id": "cloud.backend:amazon.s3",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            198,
            307,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          198,
          243,
        ],
        [
          198,
          280,
        ],
        [
          198,
          323,
        ],
        [
          198,
          361,
        ],
        [
          198,
          375,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon.s3",
    },
  ],
  "height": 592,
  "id": "amazon",
  "nodes": [
    {
      "children": [
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        11,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 373,
      },
      "title": "cloud",
    },
    {
      "children": [
        "amazon.s3",
      ],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "AMAZON",
          "width": 53,
        },
      ],
      "parent": null,
      "position": [
        11,
        323,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 373,
      },
      "title": "Amazon",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            123,
            95,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        38,
        63,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "S3 is a storage service",
      "id": "amazon.s3",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            146,
            82,
          ],
          "text": "S3",
          "width": 22,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            90,
            112,
          ],
          "text": "S3 is a storage service",
          "width": 135,
        },
      ],
      "parent": "amazon",
      "position": [
        38,
        375,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "S3",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud",
          "isDescedants": false,
        },
        {
          "source": {
            "element": "cloud",
            "isDescedants": true,
          },
          "target": {
            "element": "amazon",
            "isDescedants": false,
          },
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "amazon",
  "width": 395,
}
`;

exports[`dotLayout: >  computedCloud3levels 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          228,
          313,
        ],
        [
          224,
          322,
        ],
        [
          221,
          313,
        ],
      ],
      "id": "customer:cloud.frontend.dashboard",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            224,
            244,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          224,
          181,
        ],
        [
          224,
          222,
        ],
        [
          224,
          271,
        ],
        [
          224,
          313,
        ],
        [
          224,
          326,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend.dashboard",
    },
    {
      "headArrow": [
        [
          648,
          313,
        ],
        [
          644,
          322,
        ],
        [
          641,
          313,
        ],
      ],
      "id": "support:cloud.frontend.adminPanel",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            644,
            244,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          644,
          181,
        ],
        [
          644,
          222,
        ],
        [
          644,
          271,
        ],
        [
          644,
          313,
        ],
        [
          644,
          326,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend.adminPanel",
    },
    {
      "headArrow": [
        [
          362,
          646,
        ],
        [
          353,
          649,
        ],
        [
          358,
          641,
        ],
      ],
      "id": "cloud.frontend.adminPanel:cloud.backend.graphql",
      "label": "fetches data in zero trust network with sso authentification",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            464,
            570,
          ],
          "text": "fetches data in zero trust network with",
          "width": 224,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            464,
            586,
          ],
          "text": "sso authentification",
          "width": 115,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          532,
          506,
        ],
        [
          479,
          549,
        ],
        [
          415,
          599,
        ],
        [
          361,
          642,
        ],
        [
          350,
          651,
        ],
      ],
      "relations": [
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.adminPanel",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          237,
          637,
        ],
        [
          234,
          647,
        ],
        [
          230,
          637,
        ],
      ],
      "id": "cloud.frontend.dashboard:cloud.backend.graphql",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            232,
            576,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          228,
          506,
        ],
        [
          230,
          547,
        ],
        [
          232,
          596,
        ],
        [
          234,
          638,
        ],
        [
          234,
          651,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
      ],
      "source": "cloud.frontend.dashboard",
      "target": "cloud.backend.graphql",
    },
    {
      "headArrow": [
        [
          484,
          738,
        ],
        [
          494,
          741,
        ],
        [
          484,
          744,
        ],
      ],
      "id": "cloud.backend.graphql:cloud.backend.storage",
      "label": null,
      "labels": [],
      "parent": "cloud.backend",
      "points": [
        [
          398,
          741,
        ],
        [
          427,
          741,
        ],
        [
          456,
          741,
        ],
        [
          484,
          741,
        ],
        [
          498,
          741,
        ],
      ],
      "relations": [
        "cloud.backend.graphql:cloud.backend.storage",
      ],
      "source": "cloud.backend.graphql",
      "target": "cloud.backend.storage",
    },
    {
      "headArrow": [
        [
          661,
          965,
        ],
        [
          658,
          974,
        ],
        [
          655,
          965,
        ],
      ],
      "id": "cloud.backend.storage:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            658,
            922,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          658,
          832,
        ],
        [
          658,
          873,
        ],
        [
          658,
          922,
        ],
        [
          658,
          965,
        ],
        [
          658,
          978,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend.storage",
      "target": "amazon",
    },
  ],
  "height": 1158,
  "id": "cloud3levels",
  "nodes": [
    {
      "children": [
        "cloud.frontend.adminPanel",
        "cloud.frontend.dashboard",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        11,
        261,
      ],
      "shape": "rectangle",
      "size": {
        "height": 637,
        "width": 873,
      },
      "title": "cloud",
    },
    {
      "children": [
        "cloud.backend.graphql",
        "cloud.backend.storage",
      ],
      "color": "primary",
      "id": "cloud.backend",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "BACKEND",
          "width": 60,
        },
      ],
      "parent": "cloud",
      "position": [
        51,
        599,
      ],
      "shape": "rectangle",
      "size": {
        "height": 259,
        "width": 793,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Component that allows to query data via GraphQL.",
      "id": "cloud.backend.graphql",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            110,
            74,
          ],
          "text": "Graphql API",
          "width": 95,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            39,
            104,
          ],
          "text": "Component that allows to query data via",
          "width": 238,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            128,
            120,
          ],
          "text": "GraphQL.",
          "width": 59,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        78,
        651,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Graphql API",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The backend storage is a component that stores data.",
      "id": "cloud.backend.storage",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            91,
            74,
          ],
          "text": "Backend Storage",
          "width": 133,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            35,
            104,
          ],
          "text": "The backend storage is a component that",
          "width": 246,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            123,
            120,
          ],
          "text": "stores data.",
          "width": 70,
        },
      ],
      "parent": "cloud.backend",
      "position": [
        498,
        651,
      ],
      "shape": "storage",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend Storage",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The admin panel is a webapp that allows support staff to manage customer data.",
      "id": "cloud.frontend.adminPanel",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            74,
            74,
          ],
          "text": "Admin Panel Webapp",
          "width": 168,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            38,
            104,
          ],
          "text": "The admin panel is a webapp that allows",
          "width": 241,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            42,
            120,
          ],
          "text": "support staff to manage customer data.",
          "width": 232,
        },
      ],
      "parent": "cloud",
      "position": [
        484,
        326,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Admin Panel Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "description": "The customer dashboard is a webapp that allows customers to view their data.",
      "id": "cloud.frontend.dashboard",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            41,
            74,
          ],
          "text": "Customer Dashboard Webapp",
          "width": 235,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            34,
            104,
          ],
          "text": "The customer dashboard is a webapp that",
          "width": 250,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            53,
            120,
          ],
          "text": "allows customers to view their data.",
          "width": 211,
        },
      ],
      "parent": "cloud",
      "position": [
        64,
        326,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Customer Dashboard Webapp",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        64,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            90,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            47,
            104,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            95,
            120,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "parent": null,
      "position": [
        484,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            77,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        498,
        978,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
        {
          "element": "cloud.frontend",
          "isDescedants": true,
        },
        {
          "element": "cloud.backend",
          "isDescedants": true,
        },
      ],
      "isInclude": true,
    },
    {
      "exprs": [
        {
          "element": "cloud.frontend",
          "isDescedants": false,
        },
      ],
      "isInclude": false,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 895,
}
`;

exports[`dotLayout: >  computedCloudView 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          306,
          300,
        ],
        [
          308,
          310,
        ],
        [
          300,
          304,
        ],
      ],
      "id": "customer:cloud.frontend",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            266,
            244,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          221,
          181,
        ],
        [
          246,
          219,
        ],
        [
          276,
          263,
        ],
        [
          302,
          302,
        ],
        [
          310,
          312,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          440,
          304,
        ],
        [
          432,
          310,
        ],
        [
          434,
          300,
        ],
      ],
      "id": "support:cloud.frontend",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            482,
            244,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          520,
          181,
        ],
        [
          494,
          219,
        ],
        [
          464,
          263,
        ],
        [
          438,
          302,
        ],
        [
          430,
          312,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud.frontend",
    },
    {
      "headArrow": [
        [
          692,
          399,
        ],
        [
          701,
          403,
        ],
        [
          692,
          406,
        ],
      ],
      "id": "cloud.frontend:cloud.backend",
      "label": "fetches data",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            579,
            393,
          ],
          "text": "fetches data",
          "width": 73,
        },
      ],
      "parent": "cloud",
      "points": [
        [
          530,
          403,
        ],
        [
          582,
          403,
        ],
        [
          639,
          403,
        ],
        [
          692,
          403,
        ],
        [
          705,
          403,
        ],
      ],
      "relations": [
        "cloud.frontend.dashboard:cloud.backend.graphql",
        "cloud.frontend.adminPanel:cloud.backend.graphql",
      ],
      "source": "cloud.frontend",
      "target": "cloud.backend",
    },
    {
      "headArrow": [
        [
          869,
          600,
        ],
        [
          866,
          609,
        ],
        [
          863,
          600,
        ],
      ],
      "id": "cloud.backend:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            866,
            556,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          866,
          493,
        ],
        [
          866,
          527,
        ],
        [
          866,
          565,
        ],
        [
          866,
          600,
        ],
        [
          866,
          613,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud.backend",
      "target": "amazon",
    },
  ],
  "height": 793,
  "id": "cloudView",
  "nodes": [
    {
      "children": [
        "cloud.frontend",
        "cloud.backend",
      ],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 12,
          "fontStyle": "bold",
          "pt": [
            11,
            15,
          ],
          "text": "CLOUD",
          "width": 43,
        },
      ],
      "navigateTo": "cloud3levels",
      "parent": null,
      "position": [
        183,
        261,
      ],
      "shape": "rectangle",
      "size": {
        "height": 258,
        "width": 869,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.frontend",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            94,
          ],
          "text": "Frontend",
          "width": 70,
        },
      ],
      "parent": "cloud",
      "position": [
        210,
        313,
      ],
      "shape": "browser",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Frontend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud.backend",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            123,
            94,
          ],
          "text": "Backend",
          "width": 68,
        },
      ],
      "parent": "cloud",
      "position": [
        706,
        313,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Backend",
    },
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            90,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            47,
            104,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            95,
            120,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "parent": null,
      "position": [
        420,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            77,
            112,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        706,
        613,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "viewOf": "cloud",
  "width": 1063,
}
`;

exports[`dotLayout: >  computedIndexView 1`] = `
{
  "autoLayout": "TB",
  "edges": [
    {
      "headArrow": [
        [
          303,
          288,
        ],
        [
          306,
          298,
        ],
        [
          298,
          292,
        ],
      ],
      "id": "customer:cloud",
      "label": "opens in browser",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            272,
            244,
          ],
          "text": "opens in browser",
          "width": 102,
        },
      ],
      "parent": null,
      "points": [
        [
          223,
          181,
        ],
        [
          247,
          215,
        ],
        [
          275,
          255,
        ],
        [
          300,
          290,
        ],
        [
          307,
          301,
        ],
      ],
      "relations": [
        "customer:cloud.frontend.dashboard",
      ],
      "source": "customer",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          442,
          292,
        ],
        [
          434,
          298,
        ],
        [
          437,
          288,
        ],
      ],
      "id": "support:cloud",
      "label": "manages",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            480,
            244,
          ],
          "text": "manages",
          "width": 55,
        },
      ],
      "parent": null,
      "points": [
        [
          518,
          181,
        ],
        [
          493,
          215,
        ],
        [
          465,
          255,
        ],
        [
          440,
          290,
        ],
        [
          433,
          301,
        ],
      ],
      "relations": [
        "support:cloud.frontend.adminPanel",
      ],
      "source": "support",
      "target": "cloud",
    },
    {
      "headArrow": [
        [
          373,
          588,
        ],
        [
          370,
          597,
        ],
        [
          367,
          588,
        ],
      ],
      "id": "cloud:amazon",
      "label": "persists artifacts",
      "labels": [
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            370,
            545,
          ],
          "text": "persists artifacts",
          "width": 97,
        },
      ],
      "parent": null,
      "points": [
        [
          370,
          481,
        ],
        [
          370,
          515,
        ],
        [
          370,
          553,
        ],
        [
          370,
          588,
        ],
        [
          370,
          601,
        ],
      ],
      "relations": [
        "cloud.backend.storage:amazon.s3",
      ],
      "source": "cloud",
      "target": "amazon",
    },
  ],
  "height": 782,
  "id": "index",
  "nodes": [
    {
      "children": [],
      "color": "primary",
      "id": "customer",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            122,
            95,
          ],
          "text": "customer",
          "width": 72,
        },
      ],
      "parent": null,
      "position": [
        0,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "customer",
    },
    {
      "children": [],
      "color": "primary",
      "id": "cloud",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            136,
            95,
          ],
          "text": "cloud",
          "width": 42,
        },
      ],
      "navigateTo": "cloudView",
      "parent": null,
      "position": [
        210,
        301,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "cloud",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Support engineers are responsible for supporting customers",
      "id": "support",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            90,
            74,
          ],
          "text": "Support Engineer",
          "width": 135,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            47,
            104,
          ],
          "text": "Support engineers are responsible for",
          "width": 224,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            95,
            120,
          ],
          "text": "supporting customers",
          "width": 128,
        },
      ],
      "parent": null,
      "position": [
        420,
        0,
      ],
      "shape": "person",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Support Engineer",
    },
    {
      "children": [],
      "color": "primary",
      "description": "Amazon is a cloud provider",
      "id": "amazon",
      "labels": [
        {
          "align": "left",
          "fontSize": 18,
          "pt": [
            125,
            82,
          ],
          "text": "Amazon",
          "width": 64,
        },
        {
          "align": "left",
          "fontSize": 14,
          "pt": [
            77,
            111,
          ],
          "text": "Amazon is a cloud provider",
          "width": 161,
        },
      ],
      "navigateTo": "amazon",
      "parent": null,
      "position": [
        210,
        602,
      ],
      "shape": "rectangle",
      "size": {
        "height": 180,
        "width": 320,
      },
      "title": "Amazon",
    },
  ],
  "rules": [
    {
      "exprs": [
        {
          "wildcard": true,
        },
      ],
      "isInclude": true,
    },
  ],
  "title": "",
  "width": 740,
}
`;
